--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,11 @@
 version: "3"
 services:
-  message:
+  message_s_0:
     build: message/
     ports:
       - "9007:9007"
+    environment:
+      - SERVICE_PORT=9007
     links:
       - messageapp
       - mongodb_message
@@ -11,6 +13,24 @@ services:
       - redis
       - credit
     depends_on:
+      - messageapp
+      - mongodb_message
+      - replica_message
+      - redis
+  message_s_1:
+    build: message/
+    ports:
+      - "9008:9008"
+    environment:
+      - SERVICE_PORT=9008
+    links:
+      - messageapp
+      - mongodb_message
+      - replica_message
+      - redis
+      - credit
+    depends_on:
+      - message_s_0
       - messageapp
       - mongodb_message
       - replica_message
@@ -31,7 +51,6 @@ services:
     image: cabify/backend-bootcamp-messageapp
     ports:
       - "3000:3000"
-
   mongodb_credit:
     image: mongo
     command: mongod --port 27017    
@@ -61,9 +80,17 @@ services:
       - ./message/data/replica:/message/data/replica
     ports:
       - 27028:27028
-
   redis:
     image: redis
     ports:
       - 6379:6379
-
+  haproxy:
+    image: haproxy:1.5
+    volumes:
+      - ./haproxy:/usr/local/etc/haproxy:ro
+    ports:
+      - "80:80"
+    depends_on:
+      - message_s_0
+      - message_s_1
+    
