--- a/message/package.json
+++ b/message/package.json
@@ -18,6 +18,7 @@
     "express-json-validator-middleware": "^1.2.3",
     "mongodb": "^3.1.8",
     "mongoose": "^5.3.4",
+    "dotenv": "^6.1.0",
     "nodemon": "^1.18.4",
     "redis": "^2.8.0"
   }
