--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^3.1.8",
     "mongoose": "^5.3.4",
     "nodemon": "^1.18.4",
+    "dotenv": "^6.1.0",
     "redis": "^2.8.0"
   }
 }
