--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -5,6 +5,7 @@ global
 defaults
     log global
     mode http
+    option redispatch
     timeout connect 5000ms
     timeout client 50000ms
     timeout server 50000ms
@@ -15,5 +16,7 @@ frontend http-in
 
 backend servers
     balance roundrobin
-    server server1 message_s_0:9007 maxconn 32
-    server server2 message_s_1:9008 maxconn 32
+    option httpchk GET /health
+    server server1 message_s_0:9007 maxconn 32 check inter 1000
+    server server2 message_s_1:9008 maxconn 32 check inter 1000
+    server server2 message_s_2:9009 maxconn 32 check inter 1000
