added /haproxy and modified healthchecks

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -15,8 +15,11 @@ frontend http-in
     default_backend servers
 
 backend servers
+    stats enable
+    stats uri /haproxy
     balance roundrobin
     option httpchk GET /health
-    server server1 message_s_0:9007 maxconn 32 check inter 1000
-    server server2 message_s_1:9008 maxconn 32 check inter 1000
-    server server2 message_s_2:9009 maxconn 32 check inter 1000
+    http-check expect status 200
+    server server1 message_s_0:9007 maxconn 32 check inter 1000 fall 3 rise 2
+    server server2 message_s_1:9008 maxconn 32 check inter 1000 fall 3 rise 2
+    server server2 message_s_2:9009 maxconn 32 check inter 1000 fall 3 rise 2
